--- a/adobe-after-effect-animation-tutorial.html
+++ b/adobe-after-effect-animation-tutorial.html
@@ -868,6 +868,16 @@
                       <p>Adobe After Effects is a powerful tool for creating motion graphics and visual effects. It is widely used in the film, TV, and web video industries. This guide will help you get started with the basics of After Effects and guide you through the process of creating simple animations.</p>
                       <h2 id="getting-started">Getting Started</h2>
                       <h3 id="1-installing-after-effects">1. Installing After Effects</h3>
+                      <script type="text/javascript">
+                        atOptions = {
+                          'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                          'format' : 'iframe',
+                          'height' : 90,
+                          'width' : 728,
+                          'params' : {}
+                        };
+                      </script>
+                      <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       <ol>
                       Download Adobe Creative Cloud</strong> from the official Adobe website.
                       Install Creative Cloud</strong> on your computer.
@@ -877,6 +887,16 @@
                       <h3 id="2-understanding-the-interface">2. Understanding the Interface</h3>
                       <p>After launching After Effects, you will see several panels:</p>
                       <ul>
+                        <script type="text/javascript">
+                          atOptions = {
+                            'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                            'format' : 'iframe',
+                            'height' : 90,
+                            'width' : 728,
+                            'params' : {}
+                          };
+                        </script>
+                        <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       Project Panel: Manages your assets (videos, images, audio files).
                       Composition Panel: Displays your current composition (your working canvas).
                       Timeline Panel: Shows layers and keyframes, where most animation work happens.
@@ -939,6 +959,16 @@
                       Import Files:</strong> Drag and drop your files into the Project Panel or go to <code>File</code> &gt; <code>Import</code> &gt; <code>File</code>.
                       Organize Assets:</strong> Create folders in the Project Panel to organize your files.
                       </ol>
+                      <script type="text/javascript">
+                        atOptions = {
+                          'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                          'format' : 'iframe',
+                          'height' : 90,
+                          'width' : 728,
+                          'params' : {}
+                        };
+                      </script>
+                      <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       <h3 id="2-adding-assets-to-a-composition">2. Adding Assets to a Composition</h3>
                       <ol>
                       Drag Assets:</strong> Drag your assets from the Project Panel to the Timeline or Composition Panel.
@@ -958,6 +988,16 @@
                       Create Keyframes:</strong> Move the playhead to a different time, change the property value, and After Effects will create a new keyframe.
                       Preview Animation:</strong> Press <code>Spacebar</code> to play the composition and see your animation.
                       </ol>
+                      <script type="text/javascript">
+                        atOptions = {
+                          'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                          'format' : 'iframe',
+                          'height' : 90,
+                          'width' : 728,
+                          'params' : {}
+                        };
+                      </script>
+                      <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       <h2 id="creating-simple-animations">Creating Simple Animations</h2>
                       <h3 id="1-moving-an-object">1. Moving an Object</h3>
                       <ol>
@@ -986,6 +1026,16 @@
                       Effect Panel:</strong> Go to <code>Effect</code> &gt; Choose an effect (e.g., Blur, Distort).
                       Adjust Parameters:</strong> Use the Effect Controls Panel to adjust the effect settings.
                       </ol>
+                      <script type="text/javascript">
+                        atOptions = {
+                          'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                          'format' : 'iframe',
+                          'height' : 90,
+                          'width' : 728,
+                          'params' : {}
+                        };
+                      </script>
+                      <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       <h3 id="2-using-presets">2. Using Presets</h3>
                       <ol>
                       Browse Presets:</strong> Go to <code>Animation</code> &gt; <code>Browse Presets</code> to open Adobe Bridge and explore presets.
@@ -1028,6 +1078,16 @@
                       <ul>
                       Auto-Save:</strong> Enable auto-save in <code>Edit</code> &gt; <code>Preferences</code> &gt; <code>Auto-Save</code>.</li>
                       </ul>
+                      <script type="text/javascript">
+                        atOptions = {
+                          'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                          'format' : 'iframe',
+                          'height' : 90,
+                          'width' : 728,
+                          'params' : {}
+                        };
+                      </script>
+                      <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       <h2 id="learning-resources">Learning Resources</h2>
                       <ul>
                       Adobe After Effects Help Center:</strong> <a href="https://helpx.adobe.com/after-effects/tutorials.html">Adobe Help Center</a></li>
@@ -1113,7 +1173,16 @@
                 <!-- End Sources & Tags -->
 
                 <hr class="g-brd-gray-light-v4">
-
+                <script type="text/javascript">
+                  atOptions = {
+                    'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                    'format' : 'iframe',
+                    'height' : 90,
+                    'width' : 728,
+                    'params' : {}
+                  };
+                </script>
+                <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                 <!-- Social Shares -->
                 <div class="g-mb-30">
                   <ul class="list-inline text-uppercase mb-0">
