--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="advertisement-design.html">Advertisement Design</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                              <a class="g-color-main g-color-main--hover" href="adobe-after-effect-animation-tutorial.html">Animation Studio After Effects</a></li>
+                              <a class="g-color-main g-color-main--hover" href="adobe-after-effect-animation-tutorial.html">Animation Studio Adobe After Effects Tutorial Guide</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-5">
