--- a/presentation-slides.html
+++ b/presentation-slides.html
@@ -25,6 +25,7 @@
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Corporate Animation Artist" />
     <meta name="twitter:image" content="http://spurno.github.io"/>
+    <script type="application/ld+json" src="application/Id+json.json"></script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon/favicon.ico">
@@ -168,6 +169,8 @@
                               <a class="g-color-main g-color-main--hover" href="advertisement-design.html">Advertisement Design</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="adobe-after-effect-animation-tutorial.html">Animation Studio Adobe After Effects Tutorial Guide</a></li>
+                            <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                              <a class="g-color-main g-color-main--hover" href="infographic.html">Infographic Animation</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-5">
