--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -235,6 +235,23 @@
                               </ul>
                             </div>
                           </article>
+                          <article class="media g-mb-20">
+                            <a class="d-flex mr-3" href="animation-studio-after-effects.html"><img class="g-width-120 g-height-70" src="images/bio.jpg" alt="infographic | SPurno Animation Studio | 3D infographic"></a>
+                            <div class="media-body">
+                              <h3 class="h6">
+                                <a class="g-color-main" href="animation-studio-after-effects.html">Animation Studio on After Effects</a>
+                              </h3>
+                              <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
+                                <li class="list-inline-item">Jan 11, 2024</li>
+                                <li class="list-inline-item">/</li>
+                                <li class="list-inline-item">
+                                  <a class="g-color-gray-dark-v4 g-text-underline--none--hover" href="#">
+                                    <i class="fa fa-comments-o"></i> 46
+                                  </a>
+                                </li>
+                              </ul>
+                            </div>
+                          </article>
                         </div>
                         <div class="col-lg-5">
                           <article class="media g-mb-20">
