--- a/motion-graphics.html
+++ b/motion-graphics.html
@@ -2237,5 +2237,15 @@
               }
           });
         </script>
+        <script>
+          fetch('https://spurno.github.io/application/Id+json.json')
+            .then(response => response.text())
+            .then(structuredDataText => {
+              const script = document.createElement('script');
+              script.setAttribute('type', 'application/ld+json');
+              script.textContent = structuredDataText;
+              document.head.appendChild(script);
+            });
+      </script>
   </body>
 </html>
