--- a/index.html
+++ b/index.html
@@ -884,10 +884,8 @@
                          data-paddingright="[0,0,40,40]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
-                         style="z-index: 11; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">
-                         SPurno Animation
-                      <br/>
-                      Studio
+                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">
+                         SPurno Animation Studio
                     </div>
 
                     <!-- LAYER NR. 4 -->
@@ -916,7 +914,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 12; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Shop Now From AdobeStock
+                         style="z-index: 12; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Browse Animation Stock Footage From AdobeStock
                     </div>
 
                     <!-- LAYER NR. 5 -->
