--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
           <ul>  <!-- SLIDE  -->
             <li data-index="rs-411" data-transition="fadethroughtransparent" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="assets/img/blur1-100x50.jpg" data-rotate="0" data-fstransition="fade" data-fsmasterspeed="1000" data-fsslotamount="7" data-saveperformance="off" data-title="One" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
               <!-- MAIN IMAGE -->
-              <img src="rev/img/snowscene1.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
+              <img src="images/slider1.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
               <!-- LAYERS -->
               <div id="rrzt_411" class="rev_row_zone rev_row_zone_top" style="z-index: 9;">
 
@@ -884,7 +884,7 @@
                          data-paddingright="[0,0,40,40]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
-                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">
+                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">
                          SPurno Animation Studio
                     </div>
 
@@ -914,7 +914,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 12; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Browse Animation Stock Footage From AdobeStock
+                         style="z-index: 12; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Browse Animation Stock Footage From AdobeStock
                     </div>
 
                     <!-- LAYER NR. 5 -->
@@ -942,7 +942,7 @@
                        data-paddingbottom="[0,0,0,0]"
                        data-paddingleft="[35,35,35,35]"
 
-                       style="z-index: 13; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Shop Now
+                       style="z-index: 13; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Shop Now
                     </a>
                   </div>
                 </div>
@@ -1046,7 +1046,7 @@
             <!-- SLIDE  -->
             <li data-index="rs-412" data-transition="fadethroughtransparent" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="assets/img/blurbg14-100x50.jpg" data-rotate="0" data-saveperformance="off" data-title="Two" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
               <!-- MAIN IMAGE -->
-              <img src="rev/img/snowscene4.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
+              <img src="images/slider2.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
               <!-- LAYERS -->
               <div id="rrzt_412" class="rev_row_zone rev_row_zone_top" style="z-index: 5;">
 
@@ -1127,7 +1127,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
 
-                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">Presentation Templates
+                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">Presentation Templates
                       <br/>
                       Advertising Design
                     </div>
@@ -1158,7 +1158,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">
+                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">
                     </div>
 
                     <!-- LAYER NR. 14 -->
@@ -1186,7 +1186,7 @@
                        data-paddingbottom="[0,0,0,0]"
                        data-paddingleft="[35,35,35,35]"
 
-                       style="z-index: 9; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Buy Now
+                       style="z-index: 9; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Buy Now
                     </a>
                   </div>
                 </div>
@@ -1371,7 +1371,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
 
-                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">Get started
+                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">Get started
                       <br/>
                       -
                     </div>
@@ -1402,7 +1402,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Buy wallpaper and vector graphics
+                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Buy wallpaper and vector graphics
                     </div>
 
                     <!-- LAYER NR. 23 -->
@@ -1430,7 +1430,7 @@
                        data-paddingbottom="[0,0,0,0]"
                        data-paddingleft="[35,35,35,35]"
 
-                       style="z-index: 9; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Visit Now
+                       style="z-index: 9; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Visit Now
                     </a>
                   </div>
                 </div>
@@ -1555,7 +1555,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 17; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Poppins;">1
+                 style="z-index: 17; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Quicksand;">1
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
               AdobeStock
             </div>
@@ -1636,7 +1636,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 20; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Poppins;">2
+                 style="z-index: 20; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Quicksand;">2
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
               Vecteegy
             </div>
@@ -1717,7 +1717,7 @@
                  data-paddingbottom="[0,0,0,0]"
                  data-paddingleft="[0,0,0,0]"
 
-                 style="z-index: 23; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Poppins;">3
+                 style="z-index: 23; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Quicksand;">3
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
               Freepik Profile
             </div>
