--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/infographics-template-thumb.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="infographic-template.html">Infographic Template</a></h3>
+                                <a class="g-color-main" href="infographic.html">Infographic</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 16, 2023</li>
                                 <li class="list-inline-item">/</li>
